Fixed stacked label alignment

--- a/themes/shared/assets/sass/widgets.scss
+++ b/themes/shared/assets/sass/widgets.scss
@@ -122,6 +122,7 @@
             width: auto;
             float: none;
             margin-bottom: 0.6em;
+            text-align: left;
         }
 
         > .widget-inputArea {
